<resources>
    <string name="app_name">modelPaper</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date of birth:</string>
    <string name="update_profile">update profile</string>
</resources>